--- a/releases.json
+++ b/releases.json
@@ -47,5 +47,13 @@
     "uploadedTo": {
       "dappnode": "Tue, 08 Sep 2020 23:02:59 GMT"
     }
+  },
+  "0.0.12": {
+    "hash": "/ipfs/QmXVP4j42sSXxMpEKAdFJUufJNQyxui94tvGnjGtExkdpU",
+    "type": "manifest",
+    "uploadedTo": {
+      "http://23.254.227.151:5001": "Wed, 28 Oct 2020 19:11:46 GMT",
+      "http://80.208.229.228:5001": "Wed, 28 Oct 2020 23:33:51 GMT"
+    }
   }
 }
